--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
   sembast: ^3.8.5+1
-  riverpod: ^2.6.1
+  flutter_riverpod: ^2.6.1
   fl_chart: ^1.0.0
+  path_provider: ^2.1.5
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
