--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: decaf
-description: "A new Flutter project."
+description: "Quit caffeine fast."
 publish_to: 'none'
-version: 0.1.0
+version: 2025.07.19+1
 
 environment:
   sdk: ^3.7.2
