--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = decaf
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.decaf
+PRODUCT_BUNDLE_IDENTIFIER = com.rootcause.decaf
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.rootcause. All rights reserved.
