--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   intl: ^0.20.2
   uuid: ^4.5.1
   flutter_launcher_icons: ^0.14.4
+  in_app_review: ^2.0.10
 
 dev_dependencies:
   flutter_test:
