--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   uuid: ^4.5.1
   flutter_launcher_icons: ^0.14.4
   in_app_review: ^2.0.10
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
