--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: decaf
 description: "Quit caffeine fast."
 publish_to: 'none'
-version: 2025.08.19+7
+version: 2025.08.24+8
 
 environment:
   sdk: ^3.7.2
@@ -19,6 +19,11 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   in_app_review: ^2.0.10
   url_launcher: ^6.3.2
+  beaverlog_flutter:
+    git: 
+      url: git@github.com:drg101/beaverlog_flutter.git
+      ref: 5bf9ff8f5c0c5fd4ab52c03dc2f3a9fbfa6b723f
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -27,3 +32,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
